fail_crate/tests/invalid_rename.rs
use inew::New;

#[derive(New)]
#[new(rename = "123")]
struct A;

fn main() {}
